# lyengine-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  THIRD_PARTY_NOTICES.md
include/: project.h
include/engine/entity/: entity.h
include/engine/entity/components/: component.h
include/engine/math/colliders/: box_collider_2d.h  collider.h
include/engine/math/vectors/: vector2.h  vector3.h
include/engine/scene/: scene.h
include/utils/json/: json_loader.h  json_parser.h
src/engine/entity/: entity.c
src/engine/math/colliders/: box_collider_2d.c
src/engine/math/vectors/: vector2.c
src/engine/scene/: scene.c
src/utils/json/: json_loader.c  json_parser.c
